# CS211_Lab_Sim

./: .gitignore  CMakeLists.txt  README.md  gen_random.cpp  test.sh  test_framework.c
benchmark/: cholesky.c  cholesky_five_stage_128.out  cholesky_five_stage_16.out  cholesky_five_stage_160.out  cholesky_five_stage_192.out  cholesky_five_stage_32.out  cholesky_five_stage_64.out  cholesky_five_stage_96.out  cholesky_scoreboard_128.out  cholesky_scoreboard_16.out  cholesky_scoreboard_160.out  cholesky_scoreboard_192.out  cholesky_scoreboard_32.out  cholesky_scoreboard_64.out  cholesky_scoreboard_96.out  cholesky_tomasulo_128.out  cholesky_tomasulo_192.out  cholesky_tomasulo_64.out  matmul_five_stage_128.out  matmul_five_stage_16.out  matmul_five_stage_160.out  matmul_five_stage_192.out  matmul_five_stage_32.out  matmul_five_stage_64.out  matmul_five_stage_96.out  matmul_scoreboard_128.out  matmul_scoreboard_16.out  matmul_scoreboard_160.out  matmul_scoreboard_192.out  matmul_scoreboard_32.out  matmul_scoreboard_64.out  matmul_scoreboard_96.out  matmul_tomasulo_128.out  matmul_tomasulo_192.out  matmul_tomasulo_64.out  matrixmulti.c  qsort_five_stage_100.out  qsort_five_stage_1000.out  qsort_five_stage_500.out  qsort_scoreboard_100.out  (+6 more)
lab2/: gen_victim_trace.cpp  matrixmulti.c  quicksort.c  transpose.c  victim.trace
lab3/: kernel  kernel.c  test1.c  test2.S  test2.c
sanity/: duipai.sh  gen_random.cpp  plot.ipynb  quicksort.c  run.sh  test_framework.c
src/: Cache.cpp  CacheLayer.cpp  CacheLayer.hpp  L1L2Cache.cpp  L1L2Cache.hpp  MainCPU.cpp  MemoryManager.cpp  MemoryManager.h  Project2.cpp  Sanity.cpp  Section1.cpp  Section2.cpp  Section3.cpp  Simulator.cpp  Simulator.h
student-testcases/: random_1.c  random_1.riscv  random_2.c  random_2.riscv  random_3.c  random_3.riscv
test-inclass/: add.c
(+3 files in other folders)
